UI fixes: 1. Navbar is hidden on mobile when UA elements are visible. Now uses 100dvb for entire height 2. ::backdrop fade transition time reduced to 250ms 3. restored containment style for main element container

--- a/Upnp.Control.Web/ClientApp/src/styles/_appshell.scss
+++ b/Upnp.Control.Web/ClientApp/src/styles/_appshell.scss
@@ -1,5 +1,5 @@
 .shell {
-    height: 100vh;
+    height: 100dvb;
     display: grid;
     grid-template: 1fr auto / auto 1fr;
     grid-template-areas: "main main" "navbar navbar";
@@ -34,6 +34,8 @@
         flex-direction: column;
         overflow: hidden;
         position: relative;
+        contain: content;
+        container: main / size;
     }
 
     @include media-breakpoint-up(sm) {
